# saturable_purcell_filter

./: LICENSE.txt  README.md
cpp/: CMakeLists.txt  confined_Gaussian.h  control_with_jqf_plots.cpp  csrmatrix.h  decay_with_jqf_plots.cpp  diagonalize_atom_resonator_system.h  findroot.h  get_psi_for_excited_atoms.h  io.cpp  io.h  jqf.cpp  jqf.h  jqf_adrk4.cpp  jqf_adrk4.h  jqf_data.h  jqf_superoperator.cpp  jqf_superoperator.h  lookup3.h  master_equation.h  measure_with_jqf.cpp  measure_with_jqf.h  measure_with_jqf_plots.cpp  mkl_support.h  operator.cpp  operator.h  rk4.h  smd_from_spmat.h  types.h  x0_data.h
cpp/qroc/: CMakeLists.txt  csrmm_row_major.h  csrmmtrace_roc.h  csrmv_roc.h  master_equation_roc.cpp  master_equation_roc.h  roc_spmv_util.h  roc_util.h  sde_roc.cpp  sde_roc.h  sparse_matrix_data.h
cpp/quadrature/: quad.cpp  quad.h
python/: common_plot_setup.py  fig3.py  fig4.py  fig5.py  fig6.py  fig7.py  fig9.py  matplotlib_util.py
python/plot_data/: control_with_jqf_amplitudes_data_gauss_kappa_1_gamma2_50_g_54.772_omegad_3997_omegar_5000_omega1_4000_omega2_3997_kxr_0_kx2_1_t_0.628_sigmaF_0.02_OmegaMax_100_Nc_3.csv  control_with_jqf_opt_data_gauss_kappa_1_gamma2_50_g_54.772_omegad_3997_omegar_5000_omega1_4000_omega2_3997_kxr_0_kx2_1_t_0.628_sigmaF_0.02_OmegaMax_100_Nc_3.csv  decay_with_jqf_gamma1I_kappa_1_gamma2_0_gamma2I_0_g_54.772_Omega_0_omegad_4000_omegar_5000_omega1_4000_omega2_3997_kxr_0_kx2_1.csv  decay_with_jqf_gamma1I_kappa_1_gamma2_50_gamma2I_0_g_54.772_Omega_0_omegad_4000_omegar_5000_omega1_4000_omega2_3997_kxr_0_kx2_1.csv  decay_with_jqf_gamma1I_kappa_1_gamma2_50_gamma2I_1.5_g_54.772_Omega_0_omegad_4000_omegar_5000_omega1_4000_omega2_3997_kxr_0_kx2_1.csv  decay_with_jqf_k0x2_kappa_1_gamma2_0_gamma1I_0_gamma2I_0_g_54.772_Omega_0_omegad_4000_omegar_5000_omega1_4000_omega2_3997_kxr_0.csv  decay_with_jqf_k0x2_kappa_1_gamma2_50_gamma1I_0_gamma2I_0_g_54.772_Omega_0_omegad_4000_omegar_5000_omega1_4000_omega2_3997_kxr_0.csv  decay_with_jqf_k0x2_kappa_1_gamma2_50_gamma1I_0_gamma2I_1.5_g_54.772_Omega_0_omegad_4000_omegar_5000_omega1_4000_omega2_3997_kxr_0.csv  decay_with_jqf_omega2_kappa_1_gamma2_0_gamma1I_0_gamma2I_0_g_54.772_Omega_0_omegad_4000_omegar_5000_omega1_4000_kxr_0_kx2_1.csv  decay_with_jqf_omega2_kappa_1_gamma2_50_gamma1I_0_gamma2I_0_g_54.772_Omega_0_omegad_4000_omegar_5000_omega1_4000_kxr_0_kx2_1.csv  decay_with_jqf_omega2_kappa_1_gamma2_50_gamma1I_0_gamma2I_1.5_g_54.772_Omega_0_omegad_4000_omegar_5000_omega1_4000_kxr_0_kx2_1.csv  log_control_with_jqf.txt  log_decay_with_jqf.txt  log_measure_with_jqf.txt  measure_with_jqf_Omega_kappa_1_kappaI_0_gamma2_0_gamma2I_0_gamma2D_0_g_54.772_omegar_5000_omega1_4000_omega2_3997_omegad_5002.5_kxr_0_kx2_1_phi_0.csv  measure_with_jqf_Omega_kappa_1_kappaI_0_gamma2_50_gamma2I_0_gamma2D_0_g_54.772_omegar_5000_omega1_4000_omega2_3997_omegad_5002.5_kxr_0_kx2_1_phi_0.csv  measure_with_jqf_g_kappa_1_kappaI_0_gamma2_0_gamma2I_0_gamma2D_0_Omega_0.1_omegar_5000_omega1_4000_omega2_3997_omegad_opt_kxr_0_kx2_1_phi_0.csv  measure_with_jqf_g_kappa_1_kappaI_0_gamma2_0_gamma2I_0_gamma2D_0_Omega_2_omegar_5000_omega1_4000_omega2_3997_omegad_opt_kxr_0_kx2_1_phi_0.csv  measure_with_jqf_g_kappa_1_kappaI_0_gamma2_50_gamma2I_0_gamma2D_0_Omega_0.1_omegar_5000_omega1_4000_omega2_3997_omegad_opt_kxr_0_kx2_1_phi_0.csv  measure_with_jqf_g_kappa_1_kappaI_0_gamma2_50_gamma2I_0_gamma2D_0_Omega_2_omegar_5000_omega1_4000_omega2_3997_omegad_opt_kxr_0_kx2_1_phi_0.csv  measure_with_jqf_omegad_kappa_1_kappaI_0_gamma2_0_gamma2I_0_gamma2D_0_g_54.772_Omega_2_omegar_5000_omega1_4000_omega2_3997_kxr_0_kx2_1_phi_0.csv  measure_with_jqf_omegad_kappa_1_kappaI_0_gamma2_50_gamma2I_0_gamma2D_0_g_54.772_Omega_2_omegar_5000_omega1_4000_omega2_3997_kxr_0_kx2_1_phi_0.csv
